[gd_scene load_steps=36 format=3 uid="uid://dbu2s0t1266h5"]

[ext_resource type="Script" uid="uid://30ddpxufjhvm" path="res://scripts/world.gd" id="1_71j4m"]
[ext_resource type="PackedScene" uid="uid://b8tb5a0e70mwc" path="res://scenes/player.tscn" id="1_nnsk1"]
[ext_resource type="Script" uid="uid://dlmdrxautlm6n" path="res://inventory/scripts/inventory_interface.gd" id="2_k0juu"]
[ext_resource type="PackedScene" uid="uid://cdw60idwa7cid" path="res://inventory/scenes/inventory.tscn" id="3_71j4m"]
[ext_resource type="Resource" uid="uid://bdpule7naqk65" path="res://inventory/resources/item/coin.tres" id="4_4mrxx"]
[ext_resource type="PackedScene" uid="uid://c1vmwhuvm7g3s" path="res://inventory/scenes/slot.tscn" id="4_qfnet"]
[ext_resource type="Script" uid="uid://dag484yovhp5d" path="res://inventory/scripts/slot_data.gd" id="5_7r4gi"]
[ext_resource type="PackedScene" uid="uid://vgpa51gccitb" path="res://inventory/scenes/table.tscn" id="6_qfnet"]
[ext_resource type="PackedScene" uid="uid://bcf5xhx5qj3oo" path="res://scenes/pricing_panel.tscn" id="8_w7kh3"]
[ext_resource type="PackedScene" uid="uid://dlybxg1p88x1" path="res://inventory/scenes/shop.tscn" id="9_7r4gi"]
[ext_resource type="Texture2D" uid="uid://if1jcfwc0t5l" path="res://assets/Key/gdb-keyboard-2.png" id="9_e3hyu"]
[ext_resource type="AudioStream" uid="uid://cr48iy7uvaeea" path="res://assets/sound/coin.wav" id="9_q5onr"]
[ext_resource type="PackedScene" uid="uid://v6vkb7hwh020" path="res://scenes/pause_menu.tscn" id="11_o8fc1"]
[ext_resource type="PackedScene" uid="uid://c5qqlgw7afg2t" path="res://scenes/BG_music.tscn" id="13_jhx03"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_nnsk1"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rwgxs"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4wyf3"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_k0juu"]
normal = Vector2(-1, 0)

[sub_resource type="Resource" id="Resource_w7kh3"]
script = ExtResource("5_7r4gi")
item_data = ExtResource("4_4mrxx")
quantity = 1
metadata/_custom_type_script = "uid://dag484yovhp5d"

[sub_resource type="AtlasTexture" id="AtlasTexture_2lf6f"]
atlas = ExtResource("9_e3hyu")
region = Rect2(496, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iits"]
atlas = ExtResource("9_e3hyu")
region = Rect2(527, 0, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oo54l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lf6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iits")
}],
"loop": false,
"name": &"default",
"speed": 50.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_q5onr"]
atlas = ExtResource("9_e3hyu")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhx03"]
atlas = ExtResource("9_e3hyu")
region = Rect2(32, 160, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8fc1"]
atlas = ExtResource("9_e3hyu")
region = Rect2(32, 272, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xo05s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5onr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhx03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8fc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5onr")
}],
"loop": false,
"name": &"tab",
"speed": 50.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dss4m"]
atlas = ExtResource("9_e3hyu")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t5mc"]
atlas = ExtResource("9_e3hyu")
region = Rect2(96, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lakw3"]
atlas = ExtResource("9_e3hyu")
region = Rect2(96, 272, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pm21f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dss4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t5mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lakw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dss4m")
}],
"loop": false,
"name": &"e",
"speed": 50.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e3hyu"]
atlas = ExtResource("9_e3hyu")
region = Rect2(32, 80, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo05s"]
atlas = ExtResource("9_e3hyu")
region = Rect2(32, 192, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm21f"]
atlas = ExtResource("9_e3hyu")
region = Rect2(32, 304, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2lf6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3hyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo05s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm21f")
}],
"loop": false,
"name": &"shift",
"speed": 50.0
}]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_e3hyu"]
vertices = PackedVector2Array(383.227, 59.0781, 387.75, 115.039, 320.961, 116, 325.102, 92.0625, 169.047, 87.9531, 269, 59, 269, 90.9375, 167.75, 95.75, 167.742, 81.4063, 324.094, 60.8984, -47.8516, 116, 160, 97.0391, -45.1328, 59.9922, 160, 78.8438, 152.258, 81.4063, 150.953, 87.9531, 152.25, 95.75)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(5, 4, 8), PackedInt32Array(3, 9, 0), PackedInt32Array(6, 3, 2, 10, 11), PackedInt32Array(10, 12, 5, 13), PackedInt32Array(5, 8, 13), PackedInt32Array(10, 13, 14), PackedInt32Array(10, 14, 15), PackedInt32Array(10, 15, 16), PackedInt32Array(10, 16, 11), PackedInt32Array(6, 11, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-48, 57, 272, 56, 272, 88, 322, 89, 321, 58, 386, 56, 391, 118, 321, 119, -51, 119)])
agent_radius = 3.0

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_71j4m")
npc_spawn_chance = 50

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -11
offset_left = -165.0
offset_top = -174.0
offset_right = 1512.0
offset_bottom = 343.0
color = Color(0.631373, 0.631373, 0.631373, 1)

[node name="Player" parent="." instance=ExtResource("1_nnsk1")]
position = Vector2(36, 75)

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_top = 0
limit_right = 320
limit_bottom = 22

[node name="Label" type="Label" parent="Player"]
offset_left = -20.0
offset_top = -41.0
offset_right = 20.0
offset_bottom = -26.0
theme_override_colors/font_color = Color(0.29484, 0.523929, 0.702228, 1)
theme_override_font_sizes/font_size = 6
autowrap_mode = 2

[node name="Walls" type="StaticBody2D" parent="."]
y_sort_enabled = true
position = Vector2(1, -1)
collision_layer = 4
collision_mask = 0

[node name="Line2D2" type="Line2D" parent="Walls"]
z_index = -1
position = Vector2(176, -160)
scale = Vector2(1, 0.5)
points = PackedVector2Array(-354, 436, 1416, 436)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Line2D" type="Line2D" parent="Walls"]
z_index = 1
position = Vector2(175, -98)
scale = Vector2(1, 0.5)
points = PackedVector2Array(-354, 436, 1416, 436)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(157, 120)
shape = SubResource("WorldBoundaryShape2D_nnsk1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(148, 58)
shape = SubResource("WorldBoundaryShape2D_rwgxs")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(-1, 87)
shape = SubResource("WorldBoundaryShape2D_4wyf3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2(320, 79)
shape = SubResource("WorldBoundaryShape2D_k0juu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_k0juu")
COIN = SubResource("Resource_w7kh3")

[node name="PlayerInventory" parent="CanvasLayer/InventoryInterface" instance=ExtResource("3_71j4m")]
layout_mode = 0
offset_bottom = 60.0

[node name="ExternalInventory" parent="CanvasLayer/InventoryInterface" instance=ExtResource("3_71j4m")]
visible = false
layout_mode = 0
offset_left = 184.0
offset_right = 320.0

[node name="GrabSlot" parent="CanvasLayer/InventoryInterface" instance=ExtResource("4_qfnet")]
visible = false
modulate = Color(1, 1, 1, 0.443137)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0

[node name="PricingPanel" parent="CanvasLayer/InventoryInterface" instance=ExtResource("8_w7kh3")]
visible = false
layout_mode = 1

[node name="coin" type="AudioStreamPlayer2D" parent="CanvasLayer/InventoryInterface"]
stream = ExtResource("9_q5onr")
bus = &"coin"

[node name="GUI" type="Node" parent="CanvasLayer"]

[node name="MouseAnimationLeft" type="AnimatedSprite2D" parent="CanvasLayer/GUI"]
position = Vector2(103.5, 160)
sprite_frames = SubResource("SpriteFrames_oo54l")
frame = 1
frame_progress = 1.0

[node name="MouseAnimationRight" type="AnimatedSprite2D" parent="CanvasLayer/GUI"]
position = Vector2(191.5, 160)
sprite_frames = SubResource("SpriteFrames_oo54l")
frame = 1
frame_progress = 1.0

[node name="Tab_animation" type="AnimatedSprite2D" parent="CanvasLayer/GUI"]
position = Vector2(64, 136)
sprite_frames = SubResource("SpriteFrames_xo05s")
animation = &"tab"
frame = 3
frame_progress = 1.0

[node name="E_animation" type="AnimatedSprite2D" parent="CanvasLayer/GUI"]
position = Vector2(152, 136)
sprite_frames = SubResource("SpriteFrames_pm21f")
animation = &"e"
frame = 3
frame_progress = 1.0

[node name="ShiftAnimation" type="AnimatedSprite2D" parent="CanvasLayer/GUI"]
position = Vector2(240, 136)
sprite_frames = SubResource("SpriteFrames_2lf6f")
animation = &"shift"

[node name="Label" type="Label" parent="CanvasLayer/GUI"]
offset_left = 80.0
offset_top = 132.0
offset_right = 116.0
offset_bottom = 140.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0.0347631, 0.272509, 0.999993, 1)
theme_override_font_sizes/font_size = 6
text = "Inventory"

[node name="Label4" type="Label" parent="CanvasLayer/GUI"]
offset_left = 119.5
offset_top = 152.0
offset_right = 131.5
offset_bottom = 160.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0.0347631, 0.272509, 0.999993, 1)
theme_override_font_sizes/font_size = 6
text = "All"

[node name="Label5" type="Label" parent="CanvasLayer/GUI"]
offset_left = 207.5
offset_top = 152.0
offset_right = 219.5
offset_bottom = 160.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0.0347631, 0.272509, 0.999993, 1)
theme_override_font_sizes/font_size = 6
text = "One"

[node name="Label2" type="Label" parent="CanvasLayer/GUI"]
offset_left = 162.0
offset_top = 132.0
offset_right = 198.0
offset_bottom = 140.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0.0347631, 0.272509, 0.999993, 1)
theme_override_font_sizes/font_size = 6
text = "Interact"

[node name="Label3" type="Label" parent="CanvasLayer/GUI"]
offset_left = 256.0
offset_top = 132.0
offset_right = 292.0
offset_bottom = 140.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0.0347631, 0.272509, 0.999993, 1)
theme_override_font_sizes/font_size = 6
text = "Run"

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("11_o8fc1")]
visible = false

[node name="table" parent="." instance=ExtResource("6_qfnet")]
position = Vector2(160, 88)

[node name="Shop" parent="." instance=ExtResource("9_7r4gi")]
position = Vector2(272, 56)

[node name="Navigation" type="Node" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Navigation"]
visible = false
navigation_polygon = SubResource("NavigationPolygon_e3hyu")

[node name="Polygon2D" type="Polygon2D" parent="Navigation/NavigationRegion2D"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
position = Vector2(23.7143, 21.9999)
scale = Vector2(0.857145, 0.750001)
polygon = PackedVector2Array(153, 82.2858, 159, 80, 165, 82.2858, 166, 88.0001, 165, 94.8572, 159, 96.0001, 153, 94.8572, 152, 88.0001)

[node name="Markers" type="Node" parent="."]

[node name="EndLeftMarker" type="Marker2D" parent="Markers"]
position = Vector2(-37, 88)

[node name="LeftMarker1" type="Marker2D" parent="Markers"]
position = Vector2(104, 80)

[node name="LeftMarker2" type="Marker2D" parent="Markers"]
position = Vector2(112, 104)

[node name="MidMarker" type="Marker2D" parent="Markers"]
position = Vector2(160, 112)

[node name="RightMarker2" type="Marker2D" parent="Markers"]
position = Vector2(200, 104)

[node name="RightMarker1" type="Marker2D" parent="Markers"]
position = Vector2(216, 80)

[node name="TableMarker" type="Marker2D" parent="Markers"]
position = Vector2(64, 96)

[node name="EndRightMarker" type="Marker2D" parent="Markers"]
position = Vector2(358, 89)

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource("13_jhx03")]

[node name="NpcSpawnTimer" type="Timer" parent="."]

[connection signal="gui_input" from="CanvasLayer/InventoryInterface" to="CanvasLayer/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="CanvasLayer/InventoryInterface" to="CanvasLayer/InventoryInterface" method="_on_visibility_changed"]
[connection signal="timeout" from="NpcSpawnTimer" to="." method="_on_npc_spawn_timer_timeout"]
